# Family_Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/agents/: memory_tools.py  playwright_tools.py  postgres_context.py  postgres_memory_tools.py  postgres_tools.py  simple_qa.py  tools.py
app/internal/: admin.py
app/routers/: items.py  line.py  users.py
app/services/line/: client.py  config.py
app/services/mcp/: mcp_client.py
app/services/memory/: mem0_client.py
